decades layer order fix + fixed image heights to fix jump links issue

--- a/history.scss
+++ b/history.scss
@@ -43,6 +43,7 @@ section {
         box-shadow: 0px 4px 6px rgba(0,0,0,.4);
         border: none;
         translate: 40px;
+
         .tl-nav {
             flex-direction: column;
             padding: 0 20px;
@@ -66,6 +67,7 @@ section {
         top: 0px;
         transition: .2s all ease-in-out;
         transform-origin: top;
+        z-index: 2;
 
         a, a:visited, a:active {
             text-decoration: none;
@@ -107,6 +109,7 @@ section {
         padding: 0px 10px;
         gap: 15px;
         font-size: .8rem;
+        z-index: 1;
         
         .tl-content {
             display: flex;
@@ -116,6 +119,11 @@ section {
             padding: 30px 15px;
             gap: 10px;
             border-left: 1px solid #999;
+            width: 100%;
+
+            &:has(img[src=""]) {
+
+            }
             
             .tl-text {
                 display: flex;
@@ -132,9 +140,14 @@ section {
                 }
             }
             .tl-img {
-                flex: 1 1 50%;
+                flex: 0 0 50%;
                 width: 100%;
-                img {width: 100%;}
+                height: auto;
+
+                figure, img {margin: 0;
+                    object-fit: cover;
+                    width: 100%;
+                    height: 100%;}
                 &:has(img[src=""]) {
                     display: none;
                  }
@@ -166,7 +179,7 @@ section {
                 flex-direction: row;
             }
             .tl-img {
-                width: auto;
+                height: 400px;
             }
         }
     }
@@ -193,3 +206,14 @@ section {
     }
 
 }
+
+.will-fade-in {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: 1s all ease-in-out;
+  
+    &.fade-in {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
